# kalshi_bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.py
docs/: AUTOMATED_TRADING.md  main.md
docs/plan/: 00_task_overview.txt  01_project_setup.txt  02_kalshi_api_client.txt  03_data_models.txt  04_constraint_engine.txt  05_market_rebalancing_detector.txt  06_directional_signal_generator.txt  07_position_sizing.txt  08_execution_engine.txt  09_risk_management.txt  10_monitoring_dashboard.txt  11_main_trading_loop.txt  12_combinatorial_arbitrage.txt  13_backtesting.txt  14_testing.txt
examples/: README.md  advanced_backtest.py  authenticated_signals.py  backtest_example.py  calibration_strategy.py  corrected_momentum_backtest.py  debug_auth.py  deep_strategy_search.py  final_backtest.py  final_momentum_strategy.py  final_realistic_test.py  honest_backtest.py  improved_backtest.py  improved_strategy.py  live_signals.py  momentum_deep_test.py  momentum_final.py  momentum_strategy.py  optimal_range_finder.py  real_data_backtest.py  regime_analysis.py  robust_strategy_research.py  test_api_connection.py  unbiased_final_test.py
scripts/: com.kalshi.tradingbot.plist  run_daemon.sh
src/kalshi_arb/: __init__.py  bot.py  daemon.py  profit_taker.py
src/kalshi_arb/api/: __init__.py  client.py
src/kalshi_arb/backtest/: __init__.py  backtester.py  data_fetcher.py  (+3 more)
tests/: __init__.py  conftest.py  test_constraint_engine.py  test_fees.py  test_position_sizer.py  test_rebalancing_detector.py  test_risk_manager.py  test_signal_generator.py
(+23 files in other folders)
